# Personal-Projects

./: .gitignore  .gitmodules  README.md  contents.txt  withboost.txt  wyrdeer.py
Chess/: package-lock.json
Data and AI/: formatted.json  json_in_out.py  pokemonapi.json  pokemonapi_backup.json  raw_api_entry.txt  read_pokemon_api.py
FitnessDataAnalysis/: Dec2023.csv  Fake.csv  Jan8_23.csv  July26.csv  July26Parsed.csv  Mar12.csv  Oct10.csv  Parse-CSV.ipynb  Sep11.csv  data.csv  data2.csv  oldChartMaker2.ipynb  requirements.txt
FitnessDataAnalysis - Copy/: Nov9.csv  Parse-CSV.ipynb  Short Data.ipynb  oldChartMaker.ipynb
Logic Puzzles/: package-lock.json  package.json
Music/: Chord.py  Chord2.py  Inversions.py  Key.py  constants.py  main.py  old.py  tempCodeRunnerFile.py  test_input.txt
Pokemon SQL/: Many to Many Example.sql  commands.py  createDB.py  exampleAPI.txt  main.py
SportsBetting/: dbsetup1.sql  output.txt  scrap.txt  withoutboost.txt
Tennis Game (HTML)/: fullGame.html  index.html  main.js
Website/: README.md  package-lock.json  (+1 more)
pokemon_drafts/fast_react/backend/: Dockerfile  pyproject.toml
pokemon_drafts/fast_react/backend/app/: alembic.ini  crud.py  database.py  main.py
pokemon_drafts/fast_react/backend/app/alembic/: env.py
pokemon_drafts/fast_react/backend/app/alembic/versions/: 1d343c41452b_test_revision.py  428eb2e16ba6_pokemon_and_type_models.py  f93147d658d9_fixing_sql.py
pokemon_drafts/fast_react/backend/app/models/: pokemon.py  schemas.py  type.py
pokemon_drafts/fast_react/backend/app/routers/: pokedex.py  typedex.py
(+235 files in other folders)
