[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Theseus Lim <theseus.lim@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"
SQLAlchemy = "^1.4.40"
psycopg2-binary = "^2.9.3"
alembic = "^1.8.1"
pydantic = "^1.9.2"
requests = "^2.28.1"
mysql = "^0.0.3"
mysql-connector = "^2.2.9"
mysql-connector-python = "^8.0.30"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
